# castme

./: .gitignore  Makefile  README.md  castme.toml.template  pyproject.toml
.github/workflows/: python-publish.yml
castme/: chromecast.py  config.py  main.py  messages.py  player.py  subsonic.py
castme/backends/: chromecast.py  local.py
tests/: AlbumList.json  HighVoltage.json  test_subsonic.py
